--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 .hero-bg {
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("https://unsplash.it/1200/900?random") no-repeat center center fixed;
+    url("../img/accessibility-hero-banner.jpg") no-repeat center center fixed;
   background-size: cover;
 }
 
@@ -134,4 +134,45 @@
   .navbar-menu {
     background-color: #888;
   }
+}
+
+.logo-link {
+  height: 70px;
+  width: 250px;
+}
+
+.logo-link img {
+  width: 100%;
+}
+
+li {
+  list-style: none;
+}
+
+.hero.is-fullheight {
+  min-height: 70vh;
+}
+
+.blockquote {
+  background-color: #f5f5f5;
+  border-left: 5px solid #dbdbdb;
+  padding: 1.25em 1.5em;
+}
+
+.ol-list li {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.ol-list li::before {
+  content: "";
+  background: url(../img/arrow_sans_right-512.png) no-repeat;
+  display: inline-block;
+  text-align: center;
+  margin: 5px 10px;
+  line-height: 40px;
+  width: 40px;
+  height: 40px;
+  background-size: contain;
 }
