add attributes and semantics
alt to banner
aria-hidden to icons
caption and scope to table
visually-hidden class
hidden caption for comments
remove commented html
add footer
extenral link icon

--- a/css/styles.css
+++ b/css/styles.css
@@ -190,3 +190,19 @@ li {
   height: 40px;
   background-size: contain;
 }
+
+.visually-hidden { 
+    position: absolute !important;
+    height: 1px; 
+    width: 1px;
+    overflow: hidden;
+    clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+    clip: rect(1px, 1px, 1px, 1px);
+    white-space: nowrap; /* added line */
+}
+
+.visually-hidden:focus {
+  height: auto;
+  width: auto;
+  clip: auto;
+}
