--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,20 @@
   border: 2px solid #000;
 }
 
+.navbar-item {
+  align-items: center !important;
+}
+
+.button.is-white.is-outlined {
+  color: #fff !important;
+  background-color: transparent !important;
+}
+
+.button.is-white.is-outlined:hover {
+  color: #000 !important;
+  background-color: #fff !important;
+}
+
 .hero-bg {
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url("../img/accessibility-hero-banner.jpg") no-repeat center center fixed;
