--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,12 @@
     background-size: cover;
 }
 
+.burger {
+    background-color: transparent;
+    border: none;
+    display: inline-block;
+}
+
 .tabs {
     margin-bottom: -1px !important;
     position: relative;
@@ -136,8 +142,16 @@
     border-bottom: none;
 }
 
+.forum-list {
+  margin-top: 0.5rem;
+}
+
 .forum-list li {
     margin-bottom: 0.5rem;
+}
+
+.card-header-title {
+  justify-content: space-between;
 }
 
 @media screen and (max-width: 1087px) {
@@ -187,6 +201,10 @@ li {
     background-size: contain;
 }
 
+a:hover {
+  text-decoration: underline;
+}
+
 a:focus-visible,
 button:focus-visible,
 input:focus-visible {
@@ -199,4 +217,20 @@ input:focus-visible {
 .input:focus:not(:focus-visible) {
     box-shadow: 0 0 0 2px white, 0 0 0 4px var(--dark-blue), 0 0 4px 6px white !important;
     outline: none;
+}
+
+.tab {
+    background-color: transparent;
+    border: none;
+    font-size: 1rem;
+    padding: 8px 16px;
+    color: white;
+    cursor: pointer;
+}
+
+.is-active .tab {
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    color: var(--dark-blue);
+    background-color: white;
 }
