--- a/css/styles.css
+++ b/css/styles.css
@@ -4,8 +4,7 @@
 
 .hero-bg {
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-        url("../img/accessibility-hero-banner.jpg") no-repeat center center
-            fixed;
+    url("../img/accessibility-hero-banner.jpg") no-repeat center center fixed;
     background-size: cover;
 }
 
@@ -23,6 +22,7 @@
 .tab-content {
     padding: 2rem;
 }
+
 .tab-pane {
     display: none;
 }
@@ -143,7 +143,7 @@
 }
 
 .forum-list {
-  margin-top: 0.5rem;
+    margin-top: 0.5rem;
 }
 
 .forum-list li {
@@ -151,7 +151,7 @@
 }
 
 .card-header-title {
-  justify-content: space-between;
+    justify-content: space-between;
 }
 
 @media screen and (max-width: 1087px) {
@@ -202,7 +202,7 @@ li {
 }
 
 a:hover {
-  text-decoration: underline;
+    text-decoration: underline;
 }
 
 a:focus-visible,
@@ -236,45 +236,61 @@ input:focus-visible {
 }
 
 .tag.is-danger {
-  background-color: #B30024 !important;
+    background-color: #B30024 !important;
 }
 
 .help.is-danger {
-  color: #B30024 !important;
+    color: #B30024 !important;
 }
 
 .button.is-primary, .tag.is-primary {
-  background-color: rgb(0, 122, 122) !important;
+    background-color: rgb(0, 122, 122) !important;
 }
 
 .tag.is-success {
-  color: black !important;
+    color: black !important;
 }
 
 .help.is-success {
-  color: #017028 !important;
+    color: #017028 !important;
 }
 
 .visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  padding: 0;
-  overflow: hidden;
-  border: 0;
-  clip: rect(0 0 0 0)
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    overflow: hidden;
+    border: 0;
+    clip: rect(0 0 0 0)
 }
 
 input::placeholder {
-  appearance: none;
-  color: #4a4a4a !important;
+    appearance: none;
+    color: #4a4a4a !important;
 }
 
 input::-moz-placeholder {
-  opacity: 1;
+    opacity: 1;
 }
 
 .card-header-title h2 {
     font-weight: bold;
+}
+
+.external::after {
+    content: "\f35d";
+    font-family: Font Awesome\ 5 Free;
+    font-weight: 900;
+    margin-left: 4px;
+}
+
+.breadcrumbs {
+    display: flex;
+}
+
+.breadcrumbs i {
+    margin: 0 4px;
+    display: inline-block;
 }
