extended skip navigation

--- a/css/styles.css
+++ b/css/styles.css
@@ -294,3 +294,9 @@ input::-moz-placeholder {
     margin: 0 4px;
     display: inline-block;
 }
+
+.skip-to-container {
+    position: fixed;
+    left: 40px;
+    z-index: 10;
+}
