--- a/css/custom.css
+++ b/css/custom.css
@@ -38,7 +38,7 @@
 .select select:focus,
 .textarea:active,
 .textarea:focus {
-  outline: 2px solid;
+  outline: 2px solid blue;
 }
 
 .visually-hidden {
