--- a/css/styles.css
+++ b/css/styles.css
@@ -248,3 +248,20 @@ textarea:focus {
   white-space: nowrap;
   width: 1px;
 }
+
+.skip-link {
+  position: absolute;
+  height: 0;
+  width: 0;
+  overflow: hidden;
+}
+
+a.skip-link:focus {
+  display: block;
+  width: 120px;
+  height: fit-content;
+  background-color: #FF6685;
+  color: #000000;
+  padding: 10px;
+  border-radius: 4px;
+}
