--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -27,6 +27,18 @@ a {
   }
 }
 
+.visually-hidden {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+  white-space: nowrap; /* 1 */
+}
+
 .navbar-burger.is-white {
   color: $white;
 }
