hw2 add title for links and aside

--- a/css/custom.css
+++ b/css/custom.css
@@ -76,3 +76,15 @@
   outline: 2px solid currentColor;
   outline-offset: 1px;
 }
+
+.tabs .outlined-link:focus {
+  outline-color: black;
+}
+
+.iframe {
+  border: 0;
+}
+
+.tabs.main-menu {
+  overflow: visible;
+}
