--- a/css/custom.css
+++ b/css/custom.css
@@ -95,3 +95,11 @@
   font-weight: 900;
   padding-left: 4px;
 }
+
+.accessibility-cta:focus {
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  padding: 5px;
+  z-index: 35;
+}
