--- a/css/styles.css
+++ b/css/styles.css
@@ -249,7 +249,7 @@ input:focus-visible {
     color: #B30024 !important;
 }
 
-.button.is-primary, .tag.is-primary {
+.button.is-primary, .tag.is-primary, .hero.is-primary {
     background-color: rgb(0, 122, 122) !important;
 }
 
@@ -294,6 +294,7 @@ input::-moz-placeholder {
 
 .breadcrumbs {
     display: flex;
+    margin-top: 8px;
 }
 
 .breadcrumbs i {
@@ -322,4 +323,15 @@ fieldset {
 legend {
     font-weight: bold;
     padding: 0 4px;
+}
+
+.tabs {
+    justify-content: center;
+}
+
+.tabs .is-active {
+    background-color: white;
+    color: var(--dark-blue);
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
 }
