--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,40 @@ a:focus {
 a {
  color:#1B4FA1;
 }
+/* Focus */
+
+.input:focus,
+.navbar-item.logo-link:focus,
+.button.is-white.is-outlined:focus,
+.button.is-info:focus,
+sup a:focus,
+.is-3.title + p a:focus,
+.content p a:focus,
+.tabs li a:focus,
+.content p a b:focus,
+.tile.is-child.box .button:focus,
+a.box:focus,
+.is-pulled-right a:focus,
+.card-footer a:focus,
+.button.is-primary.is-block:focus,
+.menu-list.forum-list .tag:focus,
+.control a:focus,
+.column.is-3 ul li a:focus,
+.column.is-4 ul li a:focus,
+.soc a:focus,
+.soc + p a:focus,
+.input.is-success:focus,
+.input.is-danger:focus,
+.select select:focus,
+.control textarea:focus,
+.control input[type='checkbox']:focus,
+.control input[type='radio']:focus,
+.control .button.is-link:focus,
+.control .button.is-text:focus {
+  outline: 0;
+  border-radius: 2px;
+  box-shadow: 0 0 2px 1.5px #bc6e6e, 0 0 3px 3px #f279dd;
+}
 .button.is-info.is-active, .button.is-info:active {
     background-color: #0D4A87;
     border-color: transparent;
